--- a/.tekton/coreos-assembler-pull-request.yaml
+++ b/.tekton/coreos-assembler-pull-request.yaml
@@ -12,10 +12,10 @@ metadata:
       == "main" && ( ! "./tests/containers/***".pathChanged() || ".tekton/cosa-assembler-pull-request.yaml".pathChanged())
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: coreos-assembler
-    appstudio.openshift.io/component: coreos-assembler
+    appstudio.openshift.io/application: coreos-assembler-main
+    appstudio.openshift.io/component: coreos-assembler-main
     pipelines.appstudio.openshift.io/type: build
-  name: coreos-assembler-on-pull-request
+  name: coreos-assembler-main-on-pull-request
   namespace: coreos-tenant
 spec:
   params:
@@ -24,7 +24,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/coreos-tenant/coreos-assembler:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/coreos-tenant/coreos-assembler-main:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: build-platforms
@@ -56,7 +56,7 @@ spec:
       value: pipeline
     resolver: bundles
   taskRunTemplate:
-    serviceAccountName: build-pipeline-coreos-assembler
+    serviceAccountName: build-pipeline-coreos-assembler-main
   workspaces:
   - name: git-auth
     secret:
