--- a/.tekton/coreos-assembler-renovate-push.yaml
+++ b/.tekton/coreos-assembler-renovate-push.yaml
@@ -11,11 +11,11 @@ metadata:
       == "main" && ! "./tests/containers/***".pathChanged() && target_branch.startsWith("renovate/")
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: coreos-assembler
-    appstudio.openshift.io/component: coreos-assembler
+    appstudio.openshift.io/application: coreos-assembler-main
+    appstudio.openshift.io/component: coreos-assembler-main
     pipelines.appstudio.openshift.io/type: build
     release.appstudio.openshift.io/auto-release: "false"
-  name: coreos-assembler-renovate-on-push
+  name: coreos-assembler-main-renovate-on-push
   namespace: coreos-tenant
 spec:
   params:
@@ -24,7 +24,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/coreos-tenant/coreos-assembler:{{revision}}
+    value: quay.io/redhat-user-workloads/coreos-tenant/coreos-assembler-main:{{revision}}
   - name: image-expires-after
     value: 5d
   - name: build-platforms
@@ -56,7 +56,7 @@ spec:
       value: pipeline
     resolver: bundles
   taskRunTemplate:
-    serviceAccountName: build-pipeline-coreos-assembler
+    serviceAccountName: build-pipeline-coreos-assembler-main
   workspaces:
   - name: git-auth
     secret:
