--- a/.tekton/kola-nfs-renovate-push.yaml
+++ b/.tekton/kola-nfs-renovate-push.yaml
@@ -15,11 +15,11 @@ metadata:
       ) && target_branch.startsWith("renovate/")
   creationTimestamp: null
   labels:
-    appstudio.openshift.io/application: coreos-assembler
-    appstudio.openshift.io/component: kola-nfs
+    appstudio.openshift.io/application: coreos-assembler-main
+    appstudio.openshift.io/component: kola-nfs-main
     pipelines.appstudio.openshift.io/type: build
     release.appstudio.openshift.io/auto-release: "false"
-  name: kola-nfs-renovate-on-push
+  name: kola-nfs-main-renovate-on-push
   namespace: coreos-tenant
 spec:
   params:
@@ -28,7 +28,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/coreos-tenant/kola-nfs:{{revision}}
+    value: quay.io/redhat-user-workloads/coreos-tenant/kola-nfs-main:{{revision}}
   - name: image-expires-after
     value: 5d
   - name: build-platforms
@@ -58,7 +58,7 @@ spec:
       value: pipeline
     resolver: bundles
   taskRunTemplate:
-    serviceAccountName: build-pipeline-kola-nfs
+    serviceAccountName: build-pipeline-kola-nfs-main
   workspaces:
   - name: git-auth
     secret:
