--- a/.tekton/coreos-assembler-renovate-push.yaml
+++ b/.tekton/coreos-assembler-renovate-push.yaml
@@ -7,8 +7,8 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
-    pipelinesascode.tekton.dev/on-cel-expression: event == "push" && target_branch
-      == "main" && ! "./tests/containers/***".pathChanged() && target_branch.startsWith("renovate/")
+    pipelinesascode.tekton.dev/on-cel-expression: |
+      event == "push" && target_branch.startsWith("renovate/") && ! "./tests/containers/***".pathChanged()
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: coreos-assembler-main
