konflux: switch automerge to boolean value

--- a/renovate.json
+++ b/renovate.json
@@ -34,7 +34,7 @@
       ],
       "branchPrefix": "renovate/rpm/",
       "semanticCommits": "enabled",
-      "automerge": "true",
+      "automerge": true,
       "automergeType": "branch"
     },
     {
