osbuild: apply changes to multi-arch manifests
This applies the same containers-storage changes to the multi
arch manifests that were done in 9190a34.

Fixes 9190a34.

--- a/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.aarch64.mpp.yaml
@@ -137,7 +137,7 @@ pipelines:
           type: org.osbuild.container-deploy
           inputs:
             images:
-              type: org.osbuild.containers
+              type: org.osbuild.containers-storage
               origin: org.osbuild.source
               mpp-resolve-images:
                 images:
@@ -225,7 +225,7 @@ pipelines:
               - mpp-format-string: '{extra_kargs}'
           inputs:
             images:
-              type: org.osbuild.containers
+              type: org.osbuild.containers-storage
               origin: org.osbuild.source
               mpp-resolve-images:
                 images:
