--- a/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.s390x.mpp.yaml
@@ -129,7 +129,7 @@ pipelines:
           type: org.osbuild.container-deploy
           inputs:
             images:
-              type: org.osbuild.containers
+              type: org.osbuild.containers-storage
               origin: org.osbuild.source
               mpp-resolve-images:
                 images:
@@ -213,7 +213,7 @@ pipelines:
               - mpp-format-string: '{extra_kargs}'
           inputs:
             images:
-              type: org.osbuild.containers
+              type: org.osbuild.containers-storage
               origin: org.osbuild.source
               mpp-resolve-images:
                 images:
