--- a/src/osbuild-manifests/coreos.osbuild.ppc64le.mpp.yaml
+++ b/src/osbuild-manifests/coreos.osbuild.ppc64le.mpp.yaml
@@ -139,7 +139,7 @@ pipelines:
           type: org.osbuild.container-deploy
           inputs:
             images:
-              type: org.osbuild.containers
+              type: org.osbuild.containers-storage
               origin: org.osbuild.source
               mpp-resolve-images:
                 images:
@@ -220,7 +220,7 @@ pipelines:
               - mpp-format-string: '{extra_kargs}'
           inputs:
             images:
-              type: org.osbuild.containers
+              type: org.osbuild.containers-storage
               origin: org.osbuild.source
               mpp-resolve-images:
                 images:
